Time: 1 ms (86.65%), Space: 44.2 MB (39.41%) - LeetHub